# cors-ica

./: README.md  pyproject.toml
results/output_corsica/: 301_corsica_eeg_metrics.csv
src/CORSICA/: artifact_reduction.py
src/cors_ica.egg-info/: PKG-INFO  SOURCES.txt
src/corsica_ci.egg-info/: PKG-INFO  SOURCES.txt
src/corsica_ci_artifact_reduction.egg-info/: PKG-INFO
tests/: Test_Group_TRF.py  test.py  tests_2.py
